fix edges flickering, add dashed style

--- a/stanzas/graph-3d-grid/style.scss
+++ b/stanzas/graph-3d-grid/style.scss
@@ -20,6 +20,10 @@
   fill: none;
   stroke: var(--togostanza-default-edge-color);
   pointer-events: none;
+
+  &.dashed {
+    stroke-dasharray: 5;
+  }
 }
 
 .group-plane {
@@ -37,6 +41,7 @@
   }
   &.link {
     stroke-opacity: 1 !important;
+    filter: drop-shadow(0px 0px 2px rgba(0, 0, 0, 0.3));
   }
   &.group-plane {
     stroke-opacity: 0.7 !important;
@@ -58,8 +63,11 @@
   opacity: 0.9 !important;
   &.node {
     stroke: gray !important;
-    stroke-width: 3px !important;
-    stroke-opacity: 0.2 !important;
+    stroke-width: 1px !important;
+    stroke-opacity: 0.5 !important;
+  }
+  &.link {
+    stroke-opacity: 0.5 !important;
   }
   &.group-plane {
     stroke-opacity: 0.4 !important;
